# polymarket-mlops

./: .env.example  .gitignore  Makefile  README.md  docker-compose.yml  package-lock.json  package.json  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
app/: globals.css  layout.tsx  page.tsx
app/active/: page.tsx
app/simulation/: page.tsx
components/: BtcPriceChart.tsx  CopyTradingPanel.tsx  MarketEmbed.tsx  NavLinks.tsx  PaperLeaderboard.tsx  StrategyBoard.tsx  StrategyExplainer.tsx
docs/: CODEBASE.md
lib/: db.ts
lib/hooks/: useLiveStream.ts
lib/polymarket/: gammaClient.ts  historicalClient.ts  syntheticWindow.ts  wsClient.ts
lib/strategies/: cheapDislocation.ts  crossMarketLag.ts  dualReversion.ts  dumpHedge.ts  dumpHedgeArb.ts  fibRetracement.ts  fibonacci.ts  helpers.ts  index.ts  lotteryTicket.ts  macdMomentum.ts  martingale45.ts  momentumConfluence.ts  momentumStacking.ts  nearCertainSnipe.ts  preOrderOpen.ts  priceArbitrage.ts  rsiMomentum.ts  sniper99.ts  types.ts  vwapMomentum.ts
lib/trading/: copyTrader.ts
lib/worker/: backtestRunner.ts  liveLoop.ts  marketState.ts  paperTrading.ts
monitoring/: prometheus.yml
prisma/: schema.prisma
prisma/neon/: schema.prisma
src/: __init__.py  startup.py  supervisor.py
src/data/: __init__.py  binance_ws.py  feature_pipeline.py  indicators.py  polymarket_clob.py
tests/: conftest.py  strategies.test.ts  test_copytrade.py  test_feature_builder.py  test_indicators.py  test_meta_learner.py  test_paper_trader.py  test_signal_api.py  test_startup.py  test_strategies.py
(+28 files in other folders)
