[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "polymarket-mlops"
version = "0.1.0"
description = "MLOps trading benchmark for Polymarket prediction markets"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
dependencies = [
    "pandas>=2.0",
    "numpy>=1.26",
    "websocket-client>=1.6",
    "redis>=5.0",
    "scikit-learn>=1.4",
    "xgboost>=2.0",
    "river>=0.21",
    "mlflow>=2.10",
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
    "prometheus-client>=0.20",
    "python-dotenv>=1.0",
    "requests>=2.31",
    "httpx>=0.27",
    "pydantic>=2.6",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.3",
    "httpx>=0.27",
]

[tool.setuptools]
packages = [
    "src",
    "src.data",
    "src.signal_service",
    "src.system_a",
    "src.system_c",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
asyncio_mode = "auto"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
